# simple_codes

./: README.md  char_pyramid  data_allocation_practice  string_encrypting-challenge3  vector_manager-challenge4  vector_manager_2.0
Files&Streams/: README.md
Files&Streams/File&Streams-challenge2/: README.md  main  main.cpp
Files&Streams/File&Streams-challenge3/: README.md  main  main.cpp
Files&Streams/Files&Streams-challenge1/: README.md  main  main.cpp  responses.txt
OOP - Classes and Objects/Exception Handling/: Account.cpp  Account.h  Account_Util.cpp  Account_Util.h  CMakeLists.txt  Checking_Account.cpp  Checking_Account.h  I_Printable.cpp  I_Printable.h  IllegalBalanceException.h  InsuficientFundsException.h  README.md  Saving_Account.cpp  Saving_Account.h  Trust_Account.cpp  Trust_Account.h  main  main.cpp
OOP - Classes and Objects/Inheritance/: Account.cpp  Account.h  Account_Util.cpp  Account_Util.h  Checking_Account.cpp  Checking_Account.h  README.md  Saving_Account.cpp  Saving_Account.h  Trust_Account.cpp  Trust_Account.h  main.cpp  program
OOP - Classes and Objects/Movie_library/: Movie.cpp  Movie.sh  Movies.cpp  Movies.sh  README.md  main.cpp  program
OOP - Classes and Objects/Operator Overloading 2/: Mystring.cpp  Mystring.h  README.md  main  main.cpp
OOP - Classes and Objects/Operator overloading/: Mystring.cpp  Mystring.h  README.md  main.cpp  program
OOP - Classes and Objects/Operator overloading 3/: Mystring.cpp  Mystring.h  README.md  main  main.cpp
SmartPointers/SmartPointers-challenge1/: README.md  main  main.cpp
(+3 files in other folders)
